<resources>
    <string name="app_name">COPAK</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>">
    <string name="prefer_to_speak_with_us_n_twe_re_here_to_help">Prefer to speak with us?\n\tWe\'re here to help</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="what_are_you_interested_in">What are you interested in?</string>
    <string name="how_did_you_hear_about_us">How did you hear about us?</string>
    <string name="company_name">Company name</string>
    <string name="number_of_employees">Number of employees</string>
    <string name="submit">Submit</string>

    <string-array name="interests_array">
        <item>What are you interested in?</item>
        <item>Corporate Giving</item>
        <item>Climate-positive Workforce</item>
        <item>One-Off Purchase</item>
        <item>Brand Partner</item>
        <item>Api Integrations</item>
        <item>Custom Deal</item>
        <item>I\'d like more Information</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="business">Business</string>
    <string name="resources">Resources</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="united_states">United States</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="germany">Germany</string>
    <string name="enter_an_other_country">Rest of the world</string>
    <string name="skip_to_results">Skip</string>

</resources>