<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/homeFragment"
          android:title="@string/home"
          android:icon="@drawable/baseline_add_home_24"
          />

    <item android:id="@+id/productsFragment"
        android:title="@string/products"
        android:icon="@drawable/baseline_production_quantity_limits_24"/>

    <item android:id="@+id/resourcesFragment"
        android:title="@string/resources"
        android:icon="@drawable/baseline_interests_24"/>

    <item android:id="@+id/businessFragment2"
        android:title="@string/business"
        android:icon="@drawable/baseline_add_business_24"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/baseline_manage_accounts_24"/>
</menu>